# kidguard

./: Cargo.toml  README.md
files/etc/kidguard/: kidguard.yml
files/usr/lib/systemd/system/: kidguard.service
src/: command.rs  config.rs  lib.rs
src/modules/: accounts.rs
