[package]
name = "kidguard"
version = "0.1.0"
edition = "2021"
authors = [ "Wade Berrier <wberrier@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
confy = { version = "0", features = ["yaml_conf"], default-features = false }
log = "0"
env_logger = "0"
runcmd = "0"
