[package]
name = "kidguard"
version = "0.1.1"
edition = "2021"
authors = [ "Wade Berrier <wberrier@gmail.com>" ]
license = "GPL"
description = "Daemon to implement parental controls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
once_cell = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
confy = { version = "0", features = ["yaml_conf"], default-features = false }
log = "0"
env_logger = "0"
runcmd = "0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/kidguard", dest = "/usr/bin/kidguard", mode = "755" },
    { source = "files/usr/lib/systemd/system/kidguard.service", dest = "/usr/lib/systemd/system/kidguard.service", mode = "644" },
    { source = "files/etc/kidguard/kidguard.yml", dest = "/etc/kidguard/kidguard.yml", mode = "644", config = true },
]
post_install_script = "if [ $1 -eq 1 ] ; then systemctl enable kidguard.service >/dev/null 2>&1 || : ; systemctl start kidguard.service >/dev/null 2>&1 || : ; fi"
pre_uninstall_script = "if [ $1 -eq 0 ] ; then systemctl --no-reload disable kidguard.service > /dev/null 2>&1 || : ; systemctl stop kidguard.service > /dev/null 2>&1 || : ;  fi"
post_uninstall_script = "systemctl daemon-reload >/dev/null 2>&1 || : ; if [ $1 -ge 1 ] ; then systemctl try-restart kidguard.service >/dev/null 2>&1 || : ; fi"
